--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ProductsActivity">
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rv_products"/>
+<fragment
+    android:id="@+id/productFragment"
+    android:name="com.hurtownia.fragments.ProductsFragment"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
 
 </RelativeLayout>
