--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ProductsActivity">
-<fragment
-    android:id="@+id/productFragment"
+<LinearLayout
+    android:id="@+id/products_fragment_containter"
     android:name="com.hurtownia.fragments.ProductsFragment"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:orientation="vertical" />
+
 
 </RelativeLayout>
