--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -40,7 +40,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_products"
                 android:layout_width="27dp"
-                android:layout_height="wrap_content"
+                android:layout_height="19dp"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:layout_column="0"
@@ -111,8 +111,8 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_settings"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="2"
+                android:layout_height="75dp"
+                android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
@@ -147,7 +147,7 @@
                 android:id="@+id/cv_logout"
                 android:layout_width="4dp"
                 android:layout_height="39dp"
-                android:layout_row="2"
+                android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:layout_column="1"
                 android:layout_columnWeight="1"
@@ -181,16 +181,37 @@
                 android:id="@+id/cv_users"
                 android:layout_width="4dp"
                 android:layout_height="39dp"
-                android:layout_row="3"
+                android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:layout_column="1"
+                android:layout_column="0"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp"
                 app:cardUseCompatPadding="true">
+                <LinearLayout
+                    android:id="@+id/ll_users"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/users" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/users"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
         </GridLayout>
 
 
